# OpenVino-Blindspot-Assistance

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.adoc  blindspot_assistance.py  sonar-project.properties
BlindspotAssistance/: CMakeLists.txt  CMakeLists_common.cmake  Makefile  blindspot_assistance.py  blindspot_params.hpp  main.cpp  package.xml  requirements.txt
BlindspotAssistance/common/: CMakeLists.txt  drawer.cpp  drawer.hpp  multichannel_params.hpp
BlindspotAssistance/common/eis_common/: README.md  eis_libs_installer.sh
BlindspotAssistance/common/eis_common/cmake/: FindWJE.cmake  FindZMQ.cmake
BlindspotAssistance/common/eis_common/dockerfiles/: Dockerfile.common  Dockerfile.eisbase
BlindspotAssistance/common/eis_common/libs/ConfigManager/: CMakeLists.txt  README.md  install.sh
BlindspotAssistance/common/eis_common/libs/ConfigManager/cmake/: EISConfigMgrConfig.cmake.in  libeisconfigmgr.pc.in
BlindspotAssistance/common/eis_common/libs/ConfigManager/examples/: CMakeLists.txt  config_manager.c  env_config_example.c
BlindspotAssistance/common/eis_common/libs/ConfigManager/examples/Sample_certs/: VideoIngestion_client_certificate.pem  VideoIngestion_client_key.pem  ca_certificate.der  ca_certificate.pem  ca_key.pem
BlindspotAssistance/common/eis_common/libs/ConfigManager/go/: README.md
BlindspotAssistance/common/eis_common/libs/ConfigManager/go/ConfigManager/: ConfigManager.go  EtcdClient.go
BlindspotAssistance/common/eis_common/libs/ConfigManager/go/EnvConfig/: envconfig.go
BlindspotAssistance/common/eis_common/libs/ConfigManager/go/examples/: Makefile  main.go
BlindspotAssistance/common/eis_common/libs/ConfigManager/python/: CMakeLists.txt  README.md  setup.py.in
BlindspotAssistance/common/eis_common/libs/ConfigManager/python/eis/: config_manager.py  env_config.py  etcd_client.py
BlindspotAssistance/common/eis_common/libs/ConfigManager/python/examples/: Makefile  main.py
BlindspotAssistance/common/eis_common/libs/ConfigManager/src/: config_manager.c  env_config.c
BlindspotAssistance/common/eis_common/libs/ConfigManager/src/cgo/: cgo.go
BlindspotAssistance/common/eis_common/libs/ConfigManager/tests/: CMakeLists.txt  configmgr_tests.cpp  env_config_tests.cpp
BlindspotAssistance/common/eis_common/libs/EISMessageBus/: README.md  eis-messagebus-2.3.0-Linux.deb  install.sh
BlindspotAssistance/common/eis_common/libs/EISMessageBus/examples/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  echo-client  echo-service  echo_client.c  echo_service.c  gen_tcp_sub_conf.py  pub_thread.cpp  publisher  publisher-many  publisher.c  publisher_many.c  pubsub-threads  pubsub_threads.cpp  subscriber  subscriber.c  subscriber_thread.cpp  thread-subscriber
BlindspotAssistance/common/eis_common/libs/EISMessageBus/examples/configs/: ipc_example_config.json  ipc_example_config.json.in  ipc_example_config_multi_topics.json  ipc_example_config_multi_topics.json.in  tcp_publisher_no_security.json  tcp_publisher_with_security_no_auth.json  tcp_publisher_with_security_with_auth.json  tcp_service_client_with_security.json  tcp_service_server_no_security.json  (+6 more)
BlindspotAssistance/common/eis_common/libs/EISMessageBus/python/: README.md  setup.py
BlindspotAssistance/common/eis_common/libs/EISMsgEnv/: CMakeLists.txt  README.md
BlindspotAssistance/common/eis_common/libs/EISMsgEnv/cmake/: EISMsgEnvConfig.cmake.in  libeismsgenv.pc.in
BlindspotAssistance/common/eis_common/libs/EISMsgEnv/src/: crc32.c  hashmap.c  linkedlist.c  msg_envelope.c
BlindspotAssistance/common/eis_common/libs/EISMsgEnv/tests/: CMakeLists.txt  GoogleTestCMakeLists.txt.in  crc32_tests.cpp  hashmap_tests.cpp  linkedlist_tests.cpp  msg_envelope_tests.cpp
BlindspotAssistance/common/eis_common/libs/IntelSafeString/: CMakeLists.txt  README.md
BlindspotAssistance/common/eis_common/libs/IntelSafeString/cmake/: IntelSafeString.txt.in  IntelSafeStringConfig.cmake.in
BlindspotAssistance/common/eis_common/util/: exception.py  format_converter.py  log.py  util.go  util.py
BlindspotAssistance/common/eis_common/util/c/: CMakeLists.txt  README.md  compile_commands.json  install.sh
BlindspotAssistance/common/eis_common/util/c/cmake/: EISUtilsConfig.cmake.in  libeisutils.pc.in
BlindspotAssistance/common/eis_common/util/c/src/: config.c  json_config.c  json_validator.c  logger.c  profiling.cpp  thread_pool.cpp
BlindspotAssistance/common/eis_common/util/c/tests/: CMakeLists.txt  config_tests.cpp  logger_tests.cpp  test_config.json  thread_pool_tests.cpp  thread_safe_queue_tests.cpp
BlindspotAssistance/common/eis_common/util/influxdb/: influxDBHelper.go
BlindspotAssistance/common/eis_common/util/test/: influxDBHelperTest.go
BlindspotAssistance/common/eis_common/video/: 51-usbblaster.rules  Dockerfile.openvino  Dockerfile.videocommon  docker-compose.yml  fpga_env.sh
BlindspotAssistance/common/eis_common/video/UDFLoader/: CMakeLists.txt  README.md
BlindspotAssistance/common/eis_common/video/UDFLoader/cmake/: UDFLoaderConfig.cmake.in  libudfloader.pc.in
BlindspotAssistance/common/eis_common/video/UDFLoader/examples/: CMakeLists.txt  config.json  example.py  load_example.cpp  msgbus_config.json  native_example.cpp
BlindspotAssistance/common/eis_common/video/UDFLoader/src/: base_udf.cpp  frame.cpp  loader.cpp  native_udf_handle.cpp  python_udf_handle.cpp  udf_handle.cpp  udf_manager.cpp
BlindspotAssistance/common/eis_common/video/UDFLoader/tests/: CMakeLists.txt  frame_tests.cpp  source.sh  test_config.json  test_udf_mgr_config.json  udfloader_tests.cpp
BlindspotAssistance/common/eis_common/video/udfs/: HOWTO_GUIDE_FOR_WRITING_UDF.md  README.md
BlindspotAssistance/common/eis_common/video/udfs/native/: CMakeLists.txt
BlindspotAssistance/common/eis_common/video/udfs/python/: dummy.py
BlindspotAssistance/scripts/: list.lst
BlindspotAssistance/src/: classes.hpp  main.cpp  vehicle_status.hpp
BlindspotAssistance/src/common/: alert_publisher.hpp  classes.hpp  mqtt.hpp  multichannel_params.hpp  vehicle_status.hpp
BlindspotAssistance/utils/: points.ini
(+92 files in other folders)
